FIX - footer overflow is hidden. So no scrollbar is shown now

--- a/public/css/design.css
+++ b/public/css/design.css
@@ -201,4 +201,8 @@ input, .description {
 	#search-bar {
 		margin-top: 2em;
 	}
+
+	.rabto-footer {
+		overflow: hidden;
+	}
 }
